--- a/public/my_site.css
+++ b/public/my_site.css
@@ -10,13 +10,27 @@ body{
 }
 
 header {
-  height: 20vh;
-  background-color: red;
+  height: 12vh;
+  padding: 1em;
+  background-color: #30747f;
+}
+
+header h1 {
+  font-size: 3em;
+  color: white;
+  text-align: center;
+}
+
+div.black-bar {
+  background-color: black;
+  height: 0.5em;
+  width: 100%;
 }
 
 main {
   display: flex;
   flex-direction: row;
+  background-color: rgba(100, 225, 150, 0.25);
 }
 
 aside {
@@ -26,19 +40,19 @@ aside {
 #left {
   /*background-color: red;*/
   background: red; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(left, rgba(255, 0, 0, 1), rgba(255, 0, 0, 0.5), rgba(255, 0, 0, 0)); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(right, rgba(255, 0, 0, 1), rgba(255, 0, 0, 0.5), rgba(255, 0, 0, 0)); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(right, rgba(255, 0, 0, 1), rgba(255, 0, 0, 0.5), rgba(255, 0, 0, 0)); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to right, rgba(255, 0, 0, 1), rgba(255, 0, 0, 0.5), rgba(255, 0, 0, 0)); /* Standard syntax */
+  background: -webkit-linear-gradient(left, rgba(100, 225, 150, 1), rgba(100, 225, 150, 0)); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(right, rgba(100, 225, 150, 1), rgba(100, 225, 150, 0)); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(right, rgba(100, 225, 150, 1), rgba(100, 225, 150, 0)); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to right, rgba(100, 225, 150, 1), rgba(100, 225, 150, 0)); /* Standard syntax */
 }
 
 #right {
   /*background-color: red;*/
   background: red; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(right, rgba(255, 0, 0, 1), rgba(255, 0, 0, 0.5), rgba(255, 0, 0, 0)); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(left, rgba(255, 0, 0, 1), rgba(255, 0, 0, 0.5), rgba(255, 0, 0, 0)); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(left, rgba(255, 0, 0, 1), rgba(255, 0, 0, 0.5), rgba(255, 0, 0, 0)); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to left, rgba(255, 0, 0, 1), rgba(255, 0, 0, 0.5), rgba(255, 0, 0, 0)); /* Standard syntax */
+  background: -webkit-linear-gradient(right, rgba(100, 225, 150, 1), rgba(100, 225, 150, 0)); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(left, rgba(100, 225, 150, 1), rgba(100, 225, 150, 0)); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(left, rgba(100, 225, 150, 1), rgba(100, 225, 150, 0)); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to left, rgba(100, 225, 150, 1), rgba(100, 225, 150, 0)); /* Standard syntax */
 }
 
 content {
@@ -48,6 +62,12 @@ content {
 
 a {
   text-decoration: none;
+  color: #3d9;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #fff;
 }
 
 h1 {
@@ -77,21 +97,24 @@ span.right-image img {
   flex-direction: column; 
   justify-content: center;
   align-content: center;
+  text-align: right;
   width: 150px;
   height: 75px;
-  transform: translate(-30px, 90px) rotate(-10deg);
+  transform: translate(-20px, 90px) rotate(-10deg);
+  transition: width 0.5s, transform 0.5s;
   background-color: #000;
 }
 
-.top-links div a {
-  margin-left: auto;
-  /*text-indent: 2em;*/
-  padding: 2em; 
-  color: #fff;
+.top-links div:hover {
+  width: 200px;
+  background-color: #111;
+  transform: translate(-30px, 87px) rotate(-10deg);
 }
 
-.top-links div a:hover {
-  color: #aaa;
+.top-links div h2 {
+  margin-left: auto;
+  padding: 1em;
+  color: #fff;
 }
 
 #grad {
