--- a/public/home.html.erb
+++ b/public/home.html.erb
@@ -5,7 +5,7 @@
     <title>Brian Nickerson - Portfolio Site</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/global.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" type="text/css" href="normalize.css" /> -->
+    <link rel="stylesheet" type="text/css" href="normalize.css" />
     <script src="javascripts/pages.js" type="text/javascript"></script>
   </head>
   <body>
@@ -41,11 +41,11 @@
       <aside class="col-md-2" id="right">
       </aside>
     </main>
-    <footer>
-      <!-- <p>Phone: (929) 399-4263</p>
+    <!-- <footer>
+      <p>Phone: (929) 399-4263</p>
       <p>Email: <a href="mailto:EatGameCode@gmail.com">EatGameCode@gmail.com</a></p>
       <p>Twitter: <a href="https://twitter.com/eatgamecode">@EatGameCode</a></p>
-      <p>GitHub: <a href="https://github.com/Brozard">Brozard</a></p> -->
-    </footer>
+      <p>GitHub: <a href="https://github.com/Brozard">Brozard</a></p>
+    </footer> -->
   </body>
 </html>
