--- a/public/home.html.erb
+++ b/public/home.html.erb
@@ -5,47 +5,30 @@
     <title>Brian Nickerson - Portfolio Site</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/global.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="normalize.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" />
     <script src="javascripts/pages.js" type="text/javascript"></script>
   </head>
-  <body>
-    <header>
-      <div>
+  <body id="body">
+    <div class="container">
+      <header class="header">
         <h1>Eat. Game. Code.</h1>
-      </div>
-    </header>
-    <div class="black-bar"></div>
-    <main>
-      <nav class="top-links">
-        <div class="home" onclick="getPage('_repos.html')"><h2>Home</h2></div>
-        <div class="about" onclick="getPage('_about.html')"><h2>About</h2></div>
-        <div class="contact" onclick="getPage('_contact.html')"><h2>Contact</h2></div>
-      </nav>
-      <aside class="col-md-2" id="left">
-      </aside>
-      <content class="col-md-8 col-sm-12">
-      <br/>
-        <!-- <h2 class="title">Brian Nickerson - Full Stack Web Developer</h2> -->
-        <span class="right-image">
-          <div>
+        <nav class="top-links">
+          <div class="home" onclick="getPage('_repos.html')">Home.</div>
+          <div class="about" onclick="getPage('_about.html')">About.</div>
+          <div class="contact" onclick="getPage('_contact.html')">Contact.</div>
+        </nav>
+      </header>
+      <main class="content">
+        <div class="content-body">
+        <content>
+          <section class="scroller" id="section">
             
-          </div>
-          <div>
-            
-          </div>
-        </span>
-        <section id="section">
-          
-        </section>
-      </content>
-      <aside class="col-md-2" id="right">
-      </aside>
-    </main>
-    <!-- <footer>
-      <p>Phone: (929) 399-4263</p>
-      <p>Email: <a href="mailto:EatGameCode@gmail.com">EatGameCode@gmail.com</a></p>
-      <p>Twitter: <a href="https://twitter.com/eatgamecode">@EatGameCode</a></p>
-      <p>GitHub: <a href="https://github.com/Brozard">Brozard</a></p>
-    </footer> -->
+          </section>
+        </content>
+        </div>
+      </main>
+      <footer class="footer">
+      </footer>
+    </div>
   </body>
 </html>
