--- a/public/home.html.erb
+++ b/public/home.html.erb
@@ -27,8 +27,8 @@
         </content>
         </div>
       </main>
-      <footer class="footer">
-      </footer>
+      <!-- <footer class="footer">
+      </footer> -->
     </div>
   </body>
 </html>
